--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,9 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==4.2.20
 djangorestframework==3.16.0
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 pillow==11.2.1
 python-dotenv==1.1.0
 requests==2.32.3
