--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy to Heroku
 
 on:
   push:
@@ -8,11 +8,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Deploy to Heroku
+      - uses: actions/checkout@v3
+
+      - name: Build & Deploy to Heroku
         uses: behe/heroku-build@v1
         with:
-          app-name: "wexley-and-thorne"
-          api-key: "${{secrets.HEROKU_API_KEY}}"
-          path: "backend/"
+          email: ${{ secrets.HEROKU_EMAIL }}
+          api_key: ${{ secrets.HEROKU_API_KEY }}
+          app_name: ${{ secrets.HEROKU_APP_NAME }}
+          path: 'backend/'
