--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ jobs:
       - name: Build & Deploy to Heroku
         uses: behe/heroku-build@v1
         with:
-          email: ${{ secrets.HEROKU_EMAIL }}
-          api_key: ${{ secrets.HEROKU_API_KEY }}
-          app_name: ${{ secrets.HEROKU_APP_NAME }}
+          api-key: ${{ secrets.HEROKU_API_KEY }}
+          app-name: ${{ secrets.HEROKU_APP_NAME }}
           path: 'backend/'
