--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,11 +2,13 @@ asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==4.2.20
+django-environ==0.12.0
 djangorestframework==3.16.0
 gunicorn==23.0.0
 idna==3.10
 packaging==24.2
 pillow==11.2.1
+psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 requests==2.32.3
 sqlparse==0.5.3
