--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==4.2.20
+django-cors-headers==4.7.0
 django-environ==0.12.0
 djangorestframework==3.16.0
 gunicorn==23.0.0
