--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,25 @@
 asgiref==3.8.1
+boto3==1.37.37
+botocore==1.37.37
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==4.2.20
 django-cors-headers==4.7.0
 django-environ==0.12.0
+django-storages==1.14.6
 djangorestframework==3.16.0
 gunicorn==23.0.0
 idna==3.10
+jmespath==1.0.1
 packaging==24.2
 pillow==11.2.1
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 requests==2.32.3
+s3transfer==0.11.5
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.13.2
-urllib3==2.4.0
+urllib3==1.26.20
 whitenoise==6.9.0
